--- a/new-portfolio/src/components/contact/Contact.css
+++ b/new-portfolio/src/components/contact/Contact.css
@@ -1,51 +1,58 @@
 .contact__container{
+    background:  -webkit-linear-gradient(90deg, #334257 10%, #476072 70% );
     width: 100%;
     height: 250px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin-top: 150px;
+    /* margin-top: 150px; */
 }
-.contact_items{
-    background-color: #334257;
-    width: 35%;
-    height: 80px;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    align-items: center;
-    border-radius: 100px;
-}
-.email_contact_section, .phone_contact_section{
-    width: 100%;
-    color:#EEEEEE;
-    font-weight: bolder;
-    font-size: 2vw;
-    cursor: pointer;
-    text-decoration: none;
-}
-.phone_text{
-    text-decoration: none;
-    color:#EEEEEE;
-}
-.email_contact_section:hover, .phone_contact_section:hover{
-    background-color: #334257;
-    width: 100%;
-    height: 100px;
-    color: #EEEEEE;
-    display: flex;
-    font-size: 20px;
-    flex-direction: row;
-    justify-content: space-around;
-    align-items: center;
-    border-radius: 100px;
-    box-shadow: 10px 20px 30px #548CA8;
-}
+
 @media screen 
-and (max-width:320px){
+and (min-width:421px){
     .contact_items{
+        background:  -webkit-linear-gradient(90deg, #476072 10%, #334257 70% );
+        width: 35%;
+        height: 80px;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+        align-items: center;
+        border-radius: 100px;
+    }
+    .email_contact_section, .phone_contact_section{
+        width: 100%;
+        color:#EEEEEE;
+        font-weight: bolder;
+        font-size: 2vw;
+        cursor: pointer;
+        text-decoration: none;
+    }
+    .phone_text{
+        text-decoration: none;
+        color:#EEEEEE;
+    }
+    .email_contact_section:hover, .phone_contact_section:hover{
         background-color: #334257;
+        width: 100%;
+        height: 100px;
+        color: #EEEEEE;
+        display: flex;
+        font-size: 20px;
+        flex-direction: row;
+        justify-content: space-around;
+        align-items: center;
+        border-radius: 100px;
+        box-shadow: 10px 20px 30px #548CA8;
+    }
+    
+}
+
+@media screen 
+and (max-width:420px){
+    .contact_items{
+        background:  -webkit-linear-gradient(90deg, #476072 10%, #334257 70% );
         width: 55%;
         height: 80px;
         display: flex;
@@ -62,9 +69,9 @@ and (max-width:320px){
         cursor: pointer;
         text-decoration: none;
     }
+    .phone_text{
+        text-decoration: none;
+        color:#EEEEEE;
+    }
 }
 
-@media screen 
-and (min-width:320px){
-    
-}
