--- a/new-portfolio/src/components/questions/Questions.css
+++ b/new-portfolio/src/components/questions/Questions.css
@@ -76,16 +76,7 @@ and (max-width: 420px) {
         cursor: pointer;
     }
     .questions_container_sidebar{
-        width:15%;
-        height:300px;
-        background-color: #334257;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-        align-items: center;
-        border-radius: 20px;
-        padding: 10px;
-        margin-left: 20px;
+ display: none;
     }
 
 }
