--- a/new-portfolio/src/pages/QuestionsPage.css
+++ b/new-portfolio/src/pages/QuestionsPage.css
@@ -58,3 +58,60 @@
     font-style: oblique;
     font-weight: bolder;
 }
+/* ---------------------------------- */
+@media screen
+    and (max-width: 420px) {
+        .myHistory__container{
+            width: 100%;
+            height: 400px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+        
+        .history_section{
+            width: 100%;
+            height: 300px;
+            display: grid;
+            grid-template-columns: 1fr;
+            justify-content: center;
+            align-items: center;
+            padding: 30px;
+        }
+        
+        .picture_history_section{
+            width: 100%;
+            display: flex;
+            flex-direction:column;
+            justify-content: center;
+        
+        }
+        .question_picture{
+            width:50%;
+            height: 150px;
+            border-radius: 50px;
+            cursor:pointer;
+            border: 4px;
+            margin: auto;
+        } 
+        .text_history_section{
+            display: flex;
+            flex-direction: column;
+            justify-content:space-between;
+        }
+        
+        .question_title_history{
+            text-align:start;
+            font-weight: bolder;
+            font-size: 4vw;
+            color:white;
+            text-shadow: 1px 1px 2px black;
+        }
+        .question_text_history{
+            text-align:justify;
+            font-size: 3vw;
+            color:white;
+            font-style: oblique;
+            font-weight: bolder;
+        }
+}
