--- a/new-portfolio/src/components/contact/Contact.css
+++ b/new-portfolio/src/components/contact/Contact.css
@@ -39,7 +39,7 @@ and (min-width:421px){
         height: 100px;
         color: #EEEEEE;
         display: flex;
-        font-size: 20px;
+        font-size: 2.5vw;
         flex-direction: row;
         justify-content: space-around;
         align-items: center;
