--- a/new-portfolio/src/components/mailForm/MailForm.css
+++ b/new-portfolio/src/components/mailForm/MailForm.css
@@ -1,48 +1,50 @@
 
 .form__container{
-    background-color:#e1cef1;
-    opacity: 0.7;
+    background-color:#476072;
+    /* opacity: 0.7; */
     width:100%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
-
+    border-radius: 20px;
 }
 
 .form_title{
-    color: #7E3ABA;
+    color: #fff;
     font-size: 2.5vw;
 }
 
-.form_input{
+.form_input, .form_textarea{
     margin: 10px;
-    border-radius: 30px;
     height:40px;
     width: 40%;
+    border: 2px solid #e2e2e2;
+    border-radius: 20px;
 }
-.form_textarea{
-    margin: 10px;
-    border-radius: 10px;
-    width:80%;
-    height: 40px;
+.form_input:focus{
+    outline: none;
+	border: 2px solid #fff;
 }
+
 ::-webkit-input-placeholder{
     text-align: center;
     font-size: 1.2vw;
     font-style: oblique;
-    color: #7E3ABA;
+    color: #476072;
 }
 
 .button_submit{
-    background-color: #7E3ABA;
+    /* background-color: #fff; */
     width: 30%;
     height: 40px;
     margin: 20px;
     border-radius: 20px;
+    border:none;
     cursor: pointer;
-    color: white;
-    box-shadow: 10px 7px 7px #7E3ABA;
+    color: #fff;
+    font-size: 1.5vw;
+    background:  -webkit-linear-gradient(90deg, #476072 10%, #334257 70% );
 }
 /* .Modal{
 background-color: yellow;
