--- a/new-portfolio/src/components/mailForm/MailForm.css
+++ b/new-portfolio/src/components/mailForm/MailForm.css
@@ -2,7 +2,7 @@
 .form__container{
     background-color:#476072;
     /* opacity: 0.7; */
-    width:100%;
+    width:40%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -12,13 +12,13 @@
 
 .form_title{
     color: #fff;
-    font-size: 2.5vw;
+    font-size: 2vw;
 }
 
 .form_input, .form_textarea{
     margin: 10px;
-    height:40px;
-    width: 40%;
+    padding: 10px;
+    width: 60%;
     border: 2px solid #e2e2e2;
     border-radius: 20px;
 }
@@ -35,9 +35,8 @@
 }
 
 .button_submit{
-    /* background-color: #fff; */
-    width: 30%;
-    height: 40px;
+    width: 20%;
+    padding: 10px;
     margin: 20px;
     border-radius: 20px;
     border:none;
