--- a/new-portfolio/src/components/mailForm/MailForm.css
+++ b/new-portfolio/src/components/mailForm/MailForm.css
@@ -1,18 +1,24 @@
+@import url('https://fonts.googleapis.com/css2?family=Architects+Daughter&display=swap');
 
+
+
+@media screen 
+and (min-width:421px){
 .form__container{
-    background-color:#476072;
-    /* opacity: 0.7; */
-    width:100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-    border-radius: 20px;
-}
+        width:100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: center;
+        border-radius: 20px;
+        background:  -webkit-linear-gradient(90deg, #334257 10%, #476072 70% );
+    }
 
 .form_title{
     color: #fff;
     font-size: 2vw;
+    font-weight: bold;
+    font-family: 'Architects Daughter', cursive;
 }
 
 .form_input, .form_textarea{
@@ -32,6 +38,7 @@
     font-size: 1.2vw;
     font-style: oblique;
     color: #476072;
+    font-family: 'Architects Daughter', cursive;
 }
 
 .button_submit{
@@ -44,12 +51,61 @@
     color: #fff;
     font-size: 1.5vw;
     background:  -webkit-linear-gradient(90deg, #476072 10%, #334257 70% );
+    font-family: 'Architects Daughter', cursive;
 }
-/* .Modal{
-background-color: yellow;
-overflow: hidden;
 }
-.Overlay{
-    background-color: green; 
 
-} */
+@media screen 
+and (max-width:420px) {
+    .form__container{
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: center;
+        border-radius: 20px;
+        background:  -webkit-linear-gradient(90deg, #334257 10%, #476072 70% );
+    }
+   
+.form_title{
+    color: #fff;
+    font-size: 3.5vw;
+    font-family: 'Architects Daughter', cursive;
+}
+
+.form_input, .form_textarea{
+    padding: 10px;
+    width: 60%;
+    border: 2px solid #e2e2e2;
+    border-radius: 10px;
+    font-family: 'Architects Daughter', cursive;
+}
+.form_input:focus{
+    outline: none;
+	border: 2px solid #fff;
+}
+
+::-webkit-input-placeholder{
+    text-align: center;
+    font-size: 3vw;
+    font-style: oblique;
+    color: #476072;
+    font-family: 'Architects Daughter', cursive;
+}
+
+.button_submit{
+    width:40%;
+    padding: 10px;
+    margin: 20px;
+    border-radius: 20px;
+    border:none;
+    cursor: pointer;
+    color: #fff;
+    font-size: 3vw;
+    /* background-color: #476072;
+    box-shadow: 10px 5px 20px #476072; */
+    background:  -webkit-linear-gradient(90deg, #476072 10%, #334257 70% );
+    font-family: 'Architects Daughter', cursive;
+
+}
+}
