--- a/new-portfolio/src/components/mailForm/MailForm.css
+++ b/new-portfolio/src/components/mailForm/MailForm.css
@@ -61,7 +61,7 @@ and (max-width:420px) {
         width: 100%;
         display: flex;
         flex-direction: column;
-        justify-content: space-between;
+        justify-content: space-evenly;
         align-items: center;
         border-radius: 20px;
         background:  -webkit-linear-gradient(90deg, #334257 10%, #476072 70% );
