--- a/new-portfolio/src/components/projects/EachProject.css
+++ b/new-portfolio/src/components/projects/EachProject.css
@@ -1,40 +1,48 @@
-.project_link{
-    width: 80%;
-    background-color:#548CA8 ;
-    border-radius: 50px;
 
-    display: flex;
-    flex-direction: column;
-    align-items:center;
-    justify-content: center;
+@media screen
+    and (min-width: 421px){
+        .project_link{
+            width: 100%;
+            background:  -webkit-linear-gradient(90deg, #476072 10%, #334257 70% );            border-radius: 10px;
+            display: flex;
+            flex-direction: column;
+            align-items:center;
+            justify-content: center;
+            margin-right:50px;
+        }
+        .link_project{
+            color:#EEEEEE;
+            text-decoration: none;
+            font-size: 2vw;
+            font-weight: bolder;
+            font-style: oblique;
+            /* margin: 0; */
+        }
+/* 
+        .links_images{
+            width: 100%;
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+            align-items: center;
+        } */
+        .headerIconProject{
+            width:7%;
+            margin:10px;
+            cursor:pointer;
+        }
+    }
 
-}
-.link_project{
-    color:#EEEEEE;
-    text-decoration: none;
-    font-size: 1.5vw;
-    font-weight: bolder;
-    font-style: oblique;
-    margin: 0;
-}
-.headerIconProject{
-    width:7%;
-    margin:10px;
-    cursor:pointer;
-}
 
 @media screen
     and (max-width: 420px){
         .project_link{
             width: 100%;
-            background-color:#548CA8 ;
-            border-radius: 50px;
-        
+            background:  -webkit-linear-gradient(90deg, #476072 10%, #334257 80% );            border-radius: 20px;
             display: flex;
             flex-direction: column;
             align-items:center;
-            justify-content: center;
-        
+            justify-content: space-evenly;
         }
         .link_project{
             color:#EEEEEE;
@@ -46,5 +54,6 @@
         .headerIconProject{
             width:10%;
             cursor:pointer;
+            margin: 10px;
         }
     }
