--- a/new-portfolio/src/pages/ProjectsPage.css
+++ b/new-portfolio/src/pages/ProjectsPage.css
@@ -29,6 +29,7 @@
 @media screen
     and (max-width: 420px){
         .projectsPage_section{
+            /* background: -webkit-linear-gradient(30deg, #334257  10%, #476072 90%); */
             width: 100%;
             height: 350px;
             display: flex;
