--- a/new-portfolio/src/pages/WhyPage.css
+++ b/new-portfolio/src/pages/WhyPage.css
@@ -3,7 +3,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    align-items: center;    
+    align-items: center;   
 }
 .whyPage_section{
     width: 78%;
@@ -12,6 +12,33 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+}
+
+.title_WhyPage{
+    width: 90%;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    color: white;
+    font-weight: bolder;
+}
+
+.subtitle_WhyPage{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    color: white;
+    font-weight: bolder;
+}
+.button_container_WhyPage{
+    margin-top: 30px;
+    width: 80%;
+    display: flex;
+    justify-content: flex-end;
+}
+.button_WhyPage{
+    width: 40%;
 }
 @media screen
     and (max-width: 420px){
