--- a/new-portfolio/src/pages/WhyPage.css
+++ b/new-portfolio/src/pages/WhyPage.css
@@ -11,7 +11,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
+    align-items: flex-start;
 }
 
 .title_WhyPage{
@@ -33,13 +33,28 @@
 }
 .button_container_WhyPage{
     margin-top: 30px;
-    width: 80%;
+    width:90%;
     display: flex;
     justify-content: flex-end;
 }
 .button_WhyPage{
-    width: 40%;
+    width: 20%;
+    margin-left: 10px;
+    background-color: #334257;
+    border: none;
+    height: 40px;
 }
+.trivia_container_whyPage{
+    margin-top: 100px;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+
+
+
 @media screen
     and (max-width: 420px){
         .whyPage_section{
