--- a/new-portfolio/src/components/contact/Contact.css
+++ b/new-portfolio/src/components/contact/Contact.css
@@ -88,24 +88,33 @@ and (min-width:1024px) {
         align-items: center;
     }
         .contact_items{
-            background:  -webkit-linear-gradient(90deg, #476072 10%, #334257 70% );
+            /* background:  -webkit-linear-gradient(90deg, #476072 10%, #334257 70% ); */
             width: 100%;
             display: flex;
             flex-direction: row;
             justify-content: space-around;
             align-items: center;
         }
-        .email_contact_section, .phone_contact_section{
+        .email_contact_section, .phone_contact_section, .whatsapp_contact_section{
             width: 100%;
             color:#EEEEEE;
             font-weight: bolder;
             font-size: 3vw;
             cursor: pointer;
             text-decoration: none;
+            display: flex;
+            justify-content: center;
+            align-items: center;
         }
         .phone_text{
-            text-decoration: none;
-            color:#EEEEEE;
+          text-decoration: none;
+          color:#EEEEEE;
+          display: flex;
+          align-items: center;
+          cursor: pointer;
+        }
+        .email-icon-footer, .phone-icon-footer, .whatsapp-icon-footer{
+          margin-left: 10px;
         }
 }
 
@@ -124,7 +133,7 @@ and (min-width:320px){
     align-items: center;
 }
     .contact_items{
-        background:  -webkit-linear-gradient(90deg, #476072 10%, #334257 70% );
+        /* background:  -webkit-linear-gradient(90deg, #476072 10%, #334257 70% ); */
         width: 100%;
         height: 40px;
         display: flex;
@@ -132,17 +141,23 @@ and (min-width:320px){
         justify-content: space-around;
         align-items: center;
     }
-    .email_contact_section, .phone_contact_section{
+    .email_contact_section, .phone_contact_section, .whatsapp_contact_section{
         width: 100%;
         color:#EEEEEE;
         font-weight: bolder;
         font-size: 4vw;
         cursor: pointer;
         text-decoration: none;
+        display: flex;
+        align-items: center;
+        justify-content: center;
     }
     .phone_text{
-        text-decoration: none;
-        color:#EEEEEE;
+      text-decoration: none;
+      color:#EEEEEE;
+      display: flex;
+      align-items: center;
+      cursor: pointer;
     }
 }
 
