--- a/new-portfolio/src/components/header/Header.css
+++ b/new-portfolio/src/components/header/Header.css
@@ -200,8 +200,10 @@ and (min-width:320px)
  {
     .header__container{
         width: 100%;
-        display: grid;
-        grid-template-columns: repeat(3, 1fr);
+        display: flex;
+        flex-direction: row;
+        /* display: grid;
+        grid-template-columns: repeat(2, 1fr); */
         background:  -webkit-linear-gradient(90deg, #476072 10%, #334257 70% );
         align-items: center;
     }
@@ -219,6 +221,10 @@ and (min-width:320px)
         width: 100%;
         cursor:pointer;
     }
+    .profile_section {
+        margin-top: 20px;
+        padding: 20px;
+    }
     .headerIcon_container{
         width: 100%;
         display: flex;
@@ -227,7 +233,7 @@ and (min-width:320px)
         align-items:flex-end;
     }
     .iconSection{
-        width: 100%;
+        width: 30%;
         margin-top: 20px;
         display: flex;
         flex-direction: row;
@@ -236,22 +242,41 @@ and (min-width:320px)
         justify-content: center;
     }
     .icon_container{
+        display: none;
+    }
+    .icon_container_mobile-version {
+        width: 100%;
         display: flex;
-        flex-direction: row;
     }
     .iconHeader{
-        width:30%;
+        width:25%;
         margin: 5px;
         cursor:pointer;
+    }
+    .name-title-container{
+        text-align: center;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: center;
+        padding: 40px;
     }
 
     .name_title{
         font-weight: bolder;
         font-size: 4.5vw;
-        font-family: 'Bonheur Royale', cursive;
         cursor: pointer;
         text-shadow: 1px 1px 2px black;
         color: white;
+    }
+    .name-title-header{
+        color: white;
+        font-weight: bold;
+        width: 70%;
+        display: flex;
+        /* background: yellow; */
+        margin-left: 30px;
+        font-size: 21px;
     }
 
     .skills_header_hidden{
@@ -263,10 +288,19 @@ and (min-width:320px)
         margin-bottom: 15px;
         
     }
-    .navBarIcon{
+    button.button-download-cv, button.button-read-more{
+        width: 30%;
+    }
+    .navBar-mobile-container {
+        display: flex;
+        flex-direction: column;
         position: absolute;
-        top:60px;
-        right:0px;
+        top: 80px;
+        right: 0;
+        background-color: #334257;
+        height: 600px;
+    }
+    .navBarIcon{
         width:100%;
         height:360px;
         background-color: #334257;
@@ -274,5 +308,7 @@ and (min-width:320px)
         flex-direction: column;
         justify-content: space-around;
         align-items: center;
+        margin-bottom: 40px;
     }
   }
+
