--- a/new-portfolio/src/components/header/Header.css
+++ b/new-portfolio/src/components/header/Header.css
@@ -220,6 +220,7 @@ and (min-width:320px)
     .profilePicture{
         width: 100%;
         cursor:pointer;
+        opacity: 0.7;
     }
     .profile_section {
         margin-top: 20px;
