--- a/new-portfolio/src/components/header/Header.css
+++ b/new-portfolio/src/components/header/Header.css
@@ -312,5 +312,12 @@ and (min-width:320px)
         align-items: center;
         margin-bottom: 40px;
     }
+    .navBarIcon span {
+        border-bottom: 2px solid #476072;
+        padding: 40px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
   }
 
