--- a/new-portfolio/src/App.css
+++ b/new-portfolio/src/App.css
@@ -1,5 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Architects+Daughter&display=swap");
-
+*{
+  padding: 0;
+  margin: 0;
+  
+}
 .App {
   text-align: center;
   /* background-color: #476072; */
