--- a/new-portfolio/src/styles/generalStyles.module.scss
+++ b/new-portfolio/src/styles/generalStyles.module.scss
@@ -1,3 +1,10 @@
+.headerIconSection {
+  width: 33%;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+}
+
 .navContainer {
   width: 100%;
   display: flex;
@@ -8,4 +15,15 @@
 .navLiOptions {
   width: 100%;
   padding-left: 10px;
+}
+
+.navLiIcons {
+  width: 10%;
+}
+
+.navIconImg {
+  width: 50%;
+  margin: 10px;
+  margin-top: 30px;
+  cursor: pointer;
 }
